--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ eframe = "0.17"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ahash = { version = "0.7", features = ["serde"] }
+dirs = "4.0"
