--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 eframe = "0.17"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ahash = { version = "0.7", features = ["serde"] }
 dirs = "4.0"
+
+[profile.release]
+lto = true
+strip = true
